--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "businessName": "Smart Steel",
   "tagline": "Precision steel fabrication",
-  "email": "smart-steel@icloud.com",
-  "phone": "+94 76 690 0356",
+  "email": "master-tradies@icloud.com",
+  "phone": "+94 0000000",
   "location": "Kaluthara - Sri Lanka",
   "hours": "Mon–Sat: 9am–6pm",
 
@@ -41,5 +41,6 @@
     { "src": "assets/gallery-3.jpeg", "alt": "Steel fence fabrication" }
   ]
 }
+
 
 
